tests/typing/bad/testfile-redeclared-2.go
package main

type T struct {}
type T struct {}
func main() {}
